--- a/src/main/resources/fxml/PersonalView.fxml
+++ b/src/main/resources/fxml/PersonalView.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
@@ -9,9 +10,11 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
 
-<GridPane fx:id="root" hgap="5.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" vgap="5.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/11.0.1">
+<GridPane fx:id="root" hgap="5.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" vgap="5.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
   <columnConstraints>
     <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="291.20001220703125" minWidth="10.0" prefWidth="125.599951171875" />
     <ColumnConstraints hgrow="SOMETIMES" maxWidth="518.3999633789062" minWidth="10.0" prefWidth="475.200048828125" />
@@ -47,7 +50,17 @@
       <DatePicker fx:id="nacimientoDate" GridPane.columnIndex="1" GridPane.rowIndex="3" />
       <TextField fx:id="codigoPostalText" maxWidth="90.0" prefHeight="26.0" GridPane.columnIndex="1" GridPane.hgrow="NEVER" GridPane.rowIndex="6" />
       <TextArea fx:id="direccionText" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="4" GridPane.rowSpan="2" />
-      <ListView fx:id="nacionalidadList" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="9" GridPane.rowSpan="3" />
+      <HBox prefHeight="100.0" prefWidth="200.0" spacing="5.0" GridPane.columnIndex="1" GridPane.rowIndex="9" GridPane.rowSpan="3">
+         <children>
+            <ListView fx:id="nacionalidadList" prefHeight="200.0" prefWidth="200.0" HBox.hgrow="ALWAYS" />
+            <VBox spacing="5.0">
+               <children>
+                  <Button mnemonicParsing="false" onAction="#onAgregarNacionalidadAction" prefHeight="25.0" prefWidth="25.0" text="+" />
+                  <Button fx:id="eliminarNacionalidadBtn" mnemonicParsing="false" onAction="#onEliminarNacionalidadAction" prefHeight="25.0" prefWidth="25.0" text="-" />
+               </children>
+            </VBox>
+         </children>
+      </HBox>
       <ComboBox fx:id="paisCombo" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="8" />
    </children>
    <padding>
