--- a/src/main/resources/fxml/PersonalView.fxml
+++ b/src/main/resources/fxml/PersonalView.fxml
@@ -61,7 +61,7 @@
             </VBox>
          </children>
       </HBox>
-      <ComboBox fx:id="paisCombo" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="8" />
+      <ComboBox fx:id="paisCombo" prefWidth="150.0" promptText="Selecciona un país" GridPane.columnIndex="1" GridPane.rowIndex="8" />
    </children>
    <padding>
       <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
