--- a/src/main/resources/fxml/FormacionView.fxml
+++ b/src/main/resources/fxml/FormacionView.fxml
@@ -9,7 +9,7 @@
 
 <HBox fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" spacing="5.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <TableView fx:id="formacionTable" onMouseReleased="#onSeleccionarFormacionAction" prefHeight="200.0" prefWidth="200.0" HBox.hgrow="ALWAYS">
+      <TableView fx:id="formacionTable" editable="true" prefHeight="200.0" prefWidth="200.0" HBox.hgrow="ALWAYS">
         <columns>
           <TableColumn fx:id="desdeColumn" prefWidth="100.0" text="Desde" />
           <TableColumn fx:id="hastaColumn" prefWidth="100.0" text="Hasta" />
